fix address spacing

--- a/client/src/address/address.css
+++ b/client/src/address/address.css
@@ -17,6 +17,10 @@
   width: 100%;
 }
 
+.cityStateZipInputGroup .inputGroup {
+  margin-top: 0;
+}
+
 .addressCity {
   flex: 5;
 }
